@@ -10,7 +10,7 @@
 
 require_once(dirname(__FILE__).'/../../bootstrap/unit.php');
 
-$t = new lime_test(5, new lime_output_color());
+$t = new lime_test(8, new lime_output_color());
 
 // __construct()
 $t->diag('__construct()');
@@ -24,10 +24,10 @@ catch (RuntimeException $e)
   $t->pass('__construct() throws an RuntimeException if you don\'t pass a pattern option');
 }
 
-$v = new sfValidatorRegex(array('pattern' => '/^[0-9]+$/'));
-
 // ->clean()
 $t->diag('->clean()');
+
+$v = new sfValidatorRegex(array('pattern' => '/^[0-9]+$/'));
 $t->is($v->clean(12), '12', '->clean() checks that the value match the regex');
 
 try
@@ -42,6 +42,21 @@ catch (sfValidatorError $e)
   $t->is($e->getCode(), 'invalid', '->clean() throws a sfValidatorError');
 }
 
+$v = new sfValidatorRegex(array('pattern' => '/^[0-9]+$/', 'must_match' => false));
+$t->is($v->clean('symfony'), 'symfony', '->clean() checks that the value does not match the regex if must_match is false');
+
+try
+{
+  $v->clean(12);
+  $t->fail('->clean() throws an sfValidatorError if the value matches the pattern if must_match is false');
+  $t->skip('', 1);
+}
+catch (sfValidatorError $e)
+{
+  $t->pass('->clean() throws an sfValidatorError if the value matches the pattern if must_match is false');
+  $t->is($e->getCode(), 'invalid', '->clean() throws a sfValidatorError');
+}
+
 // ->asString()
 $t->diag('->asString()');
-$t->is($v->asString(), 'Regex({ pattern: \'/^[0-9]+$/\' })', '->asString() returns a string representation of the validator');
+$t->is($v->asString(), 'Regex({ must_match: false, pattern: \'/^[0-9]+$/\' })', '->asString() returns a string representation of the validator');
